--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1289,19 +1289,271 @@
     </string-array>
 
     <string-array name="meto_project_benchmarks">
-        <item>no programs</item>
-        <item>Currently no premade workouts</item>
-        <item>6,6,7,3,150,360</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>7,1,1,7,4,1,1,4,1,4,4,1</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>3,3,7,3,3,7,4,4,4,7,7,4,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>7,7,7,5,5,7,7,7,4,7,7,4,4,7,7,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,100</item>
+        <item>2,5,5,2,5,5,4,5,5,4,7,7,4,7,7,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>2,5,5,2,2,2,4,5,5,4,7,7,4,7,7,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3</item>
+
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>2,10,10,2,5,5,5,7,7,5,5,5,7,5,5,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,40,100</item>
+        <item>2,10,10,2,5,5,5,7,7,5,5,5,7,5,5,7,6,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>10,10,5,10,10,5,5,5,7,10,10,7,4,10,10,4,5,5,6,6,6,9,9,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,5,5,5,5</item>
+
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>3,6,7,3,2,150,300</item>
+        <item>1,1,1,7,7,1</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>1,1,7,1,7,7,1,4,4,1</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>7,1,7,1,7,7,4,4,4,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>7,5,7,3,5,5,4,7,7,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>2,5,2,3,5,5,4,7,7,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>2,5,2,2,7,7,5,7,7,5</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>2,5,2,2,7,7,7,7,7,5</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>2,10,2,2,5,8,5,5,6,6</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>10,10,2,2,5,8,8,5,6,6</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>10,10,8,8,8,8,6,6,6,9</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
+
     </string-array>
 
     <string-array name="meto_simulator_benchmarks">
-        <item>no programs</item>
-        <item>Currently no premade workouts</item>
-        <item>6,6,7,3,150,360</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>6,6,6,6,5,4,4,5,1,8,8,1</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>6,12,12,6,3,3,8,8,5,8,8,5,5,8,8,5</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>12,12,10,6,6,10,8,8,6,8,8,6,5,6,6,5</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,100</item>
+        <item>12,10,10,12,10,10,6,12,12,6,8,8,8,12,12,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>12,15,15,12,2,2,6,10,10,6,6,6,8,12,12,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3</item>
+
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>15,15,10,15,15,10,10,12,12,10,12,12,6,10,10,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,40,100</item>
+        <item>15,15,2,15,15,2,15,12,12,15,12,12,12,10,10,12,7,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,5,5</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>13,13,2,13,13,2,10,15,15,10,10,10,12,15,15,12,10,10,7,7,7,11,11,7</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>13,13,15,13,13,15,10,15,15,10,15,15,10,15,15,10,10,10,7,11,11,7,11,11</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,35,80</item>
+        <item>13,13,10,13,13,10,15,15,12,13,13,12,15,15,11,11,11,14,14,11 </item>
+        <item>1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>10,1,10,0,3,30,80</item>
+        <item>13,13,15,13,13,15,15,15,10,13,13,10,15,15,11,14,14,11,14,14 </item>
+        <item>1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5</item>
+
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>13,13,13,15,15,13,13,13,13,15,15,13,14,14,14,14,7,7</item>
+        <item>2,2,2,2,2,2,3,3,3,3,3,3,4,4,5,5,6,6</item>
+
+
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>3,6,7,3,2,150,300</item>
+        <item>1,6,1,3,4,1</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>6,6,1,12,3,1,5,9,5,5</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>6,6,6,3,12,1,5,9,5,5</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>3,3,3,6,12,6,5,6,5,8</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>3,2,12,12,10,6,8,6,5,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>2,2,10,10,6,12,8,10,12,5</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>2,13,15,15,10,12,8,10,12,8</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>13,12,10,15,15,15,10,12,7,7</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>13,15,13,13,15,15,10,12,7,7</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>13,10,10,15,15,12,7,11,11,11</item>
+        <item>2,2,2,2,3,3,4,4,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>13,10,10,15,15,12,11,11,7,14</item>
+        <item>2,2,3,3,3,3,4,4,5,5</item>
+
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>13,15,13,13,13,15,11,14,14,14,7,7</item>
+        <item>2,2,2,2,3,3,4,4,5,5,6,6</item>
     </string-array>
 
 <!-- Basic Grips and Grades test -->
