improved gradelistview to use same grade images as benchmark activity uses. Include filter image, where grades are selected base on range that user has set in filter activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2718,6 +2718,7 @@
     </string-array>
 
     <string-array name="grades">
+        <item>Custom</item>
         <item>5A</item>
         <item>5B</item>
         <item>5C</item>
