--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,14 +140,7 @@
         <item>5,6,7,3,2,140,300</item>
         <item>6,10,3,10,8,8,10,8,8,8</item>
         <item>1,1,1,1,2,2,2,2,3,3</item>
-        <!--
 
-        <item>6A+ Benchmark</item>
-        <item>Grips &amp; Grades test</item>
-        <item>5,6,7,3,2,140,300</item>
-        <item>6,10,3,10,5,8,5,8,8,6</item>
-        <item>1,1,1,1,2,2,3,3,3,3</item>
--->
 
         <item>6B Benchmark</item>
         <item>Grips &amp; Grades test, intro to two middle grip</item>
@@ -792,11 +785,168 @@
     </string-array>
 
     <string-array name="tension_mk2_benchmarks">
-        <item>no programs</item>
-        <item>Currently no premade workouts</item>
-        <item>6,6,7,3,150,360</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
-        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>6,5,5,6,4,4,4,4,1,1,1,1</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>4,5,5,4,5,5,6,4,4,6,1,1</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,45,120</item>
+        <item>4,7,7,4,6,5,5,6,6,4,4,6</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two finger pocket</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>7,7,5,8,8,5,4,5,5,4,6,5,5,6,4,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two finger pocket</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>7,7,7,8,8,7,4,5,5,4,5,5,4,5,5,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two front grip</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>8,8,2,7,7,2,4,7,7,4,5,5,4,7,7,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two front grip</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>8,8,2,8,8,2,5,7,7,5,5,5,4,7,7,4</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>8,2,2,8,8,8,8,8,7,7,5,8,8,5,7,7,8,5,5,8,4,6,6,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,5,5,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>3,4,4,3,8,8,8,8,5,8,8,5,7,7,8,5,5,8,4,6,6,4,4,4</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two back finger grip</item>
+        <item>9,1,10,0,3,35,80</item>
+        <item>2,2,7,3,3,7,8,8,7,8,8,7,4,4,4,5,5,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two back finger grip</item>
+        <item>9,1,10,0,3,30,80</item>
+        <item>2,2,2,3,3,2,7,2,2,7,8,8,4,5,5,4,5,5</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,4,4,4,4,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>3,3,8,2,2,8,2,7,7,2,5,5,7,7,6,4,4,6</item>
+        <item>1,1,2,2,2,2,3,3,3,3,4,4,5,5,6,6,6,6</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>3,3,2,2,2,2,5,7,7,5,7,8,8,7,8,8,4,4</item>
+        <item>1,1,2,2,3,3,4,4,4,4,5,5,5,5,5,5,6,6</item>
+        <!-- REPEATERS -->
+
+        <item>5C Benchmark</item>
+        <item>Only four finger grip</item>
+        <item>3,6,7,3,2,150,300</item>
+        <item>1,1,1,6,4,1</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test, intro to three finger grips</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>1,4,6,4,4,4,1,4,1,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test, intro to three finger grips</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>6,4,4,4,5,4,1,4,1,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two middle grip</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>5,4,5,5,6,4,6,5,6,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two middle grip</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>5,5,6,7,6,4,6,5,6,4</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>7,7,5,8,4,4,6,7,4,4</item>
+        <item>1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>7,7,4,4,6,7,4,4,1,6</item>
+        <item>1,1,2,2,3,3,3,3,5,5</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>8,8,4,2,7,4,4,7,5,5</item>
+        <item>1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>8,8,4,2,7,5,4,7,4,6</item>
+        <item>1,1,1,1,2,2,2,2,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>8,2,2,2,7,7,7,7,5,6</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>8,2,2,2,5,8,4,8,4,4</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>8,3,8,8,8,7,8,7,6,4,5,4</item>
+        <item>1,1,2,2,2,2,3,3,4,4,5,5</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,90,180</item>
+        <item>2,3,8,8,8,7,8,8,6,5,5,5</item>
+        <item>1,1,2,2,3,3,3,3,4,4,5,5</item>
+
+        <item>8A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,6,7,3,1,90,1</item>
+        <item>3,3,3,3,8,8,8,2,8,8,7,2,4,4,4,5,7,7,7,8,4,6,4,4</item>
+        <item>1,1,1,1,2,2,8,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,6,6</item>
     </string-array>
 
     <string-array name="moonhard_benchmarks">
@@ -2430,19 +2580,318 @@
     </string-array>
 
     <string-array name="target10a_benchmarks">
-        <item>no Workouts</item>
-        <item>This hangboard currently has no pre made workouts</item>
-        <item>1,1,10,0,1,150,300</item>
-        <item>1,1</item>
-        <item>8,8</item>
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>6,6,3,6,6,3,3,3,7,7,7,7</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,50,120</item>
+        <item>3,12,12,3,9,6,6,9,6,5,5,6,6,7,7,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,120</item>
+        <item>3,12,12,3,9,3,3,9,6,5,5,6,6,5,5,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,45,100</item>
+        <item>12,12,9,12,12,9,6,3,3,6,5,5,8,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,5,5</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>7,1,10,0,3,40,100</item>
+        <item>12,12,2,12,12,2,6,3,3,6,5,5,8,8</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3,5,5</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two finger pocket</item>
+        <item>9,1,10,0,3,40,100</item>
+        <item>9,4,4,9,5,9,9,5,6,12,12,6,8,8,8,6,6,8</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>4,4,2,2,3,3,5,12,12,5,8,8,7,10,10,7</item>
+        <item>1,1,1,1,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>2,2,4,4,12,13,13,12,13,13,4,5,5,4,12,12,7,7,5,8,8,5,10,10</item>
+        <item>1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,5,5,5,5,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>4,4,12,4,4,12,13,13,12,12,12,9,9,12,8,6,6,8,5,8,8,5,10,10</item>
+        <item>1,1,2,2,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5,5,5,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,35,80</item>
+        <item>12,4,4,12,4,4,4,9,9,4,10,10,5,10,10,5,8,8</item>
+        <item>2,2,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,30,80</item>
+        <item>5,2,2,5,12,4,4,12,4,4,11,11,6,12,12,6,8,8</item>
+        <item>2,2,2,2,3,3,3,3,3,3,4,4,5,5,5,5,6,6</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>2,4,4,2,2,4,4,2,5,10,10,5,12,12,8,6,6,8</item>
+        <item>2,2,2,2,3,3,3,3,4,4,4,4,5,5,6,6,6,6</item>
+
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>3,6,7,3,3,150,300</item>
+        <item>1,1,1,6,6,1</item>
+        <item>1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,150,300</item>
+        <item>1,3,6,6,6,3,7,7,7,1</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>6,3,6,6,3,3,7,7,7,7</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>6,12,12,3,9,6,6,6,7,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>12,3,9,6,6,2,5,6,7,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test, intro to two finger pocket</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>12,12,2,3,12,7,5,5,8,8</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>12,2,2,3,12,6,5,5,7,8</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>9,2,5,13,6,12,8,8,8,10</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>4,2,5,9,5,12,7,8,7,10</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>4,4,12,12,4,5,10,8,6,6</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,100,240</item>
+        <item>2,2,12,4,4,5,10,8,6,11</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>4,4,2,12,4,4,11,5,12,5,8,8</item>
+        <item>2,2,2,2,3,3,4,4,5,5,6,6</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,90,180</item>
+        <item>2,12,4,4,11,5,12,5,7,8,8,8</item>
+        <item>2,2,3,3,4,4,5,5,6,6,8,8</item>
+
+
     </string-array>
 
     <string-array name="strongant_benchmarks">
-        <item>no Workouts</item>
-        <item>This hangboard currently has no pre made workouts</item>
-        <item>1,1,10,0,1,150,300</item>
-        <item>1,1</item>
-        <item>8,8</item>
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,1,10,0,3,50,120</item>
+        <item>1,10,10,1,6,6,6,10,10,6</item>
+        <item>1,1,1,1,1,1,1,1,1,1</item>
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,50,120</item>
+        <item>10,10,10,2,2,10,6,4,4,6,6,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,1,10,0,3,45,120</item>
+        <item>10,2,2,10,2,2,4,4,6,4,4,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3,3,3</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,45,100</item>
+        <item>15,6,6,15,10,7,7,10,4,10,10,4,6,10,10,6</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>15,2,2,15,3,3,4,10,10,4,10,10,6,9,9,6</item>
+        <item>1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>3,7,7,3,3,15,15,3,3,6,6,3,10,9,9,10</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,3,3,3,3</item>
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>8,1,10,0,3,40,100</item>
+        <item>15,7,7,15,3,15,15,3,9,9,10,9,9,10,14,14</item>
+        <item>1,1,1,1,1,1,1,1,2,2,3,3,3,3,5,5</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,40,80</item>
+        <item>15,7,7,15,7,7,7,7,7,6,6,7,3,3,9,9,9,3,3,9,5,6,6,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,3,3,5,5,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>12,1,10,0,2,35,80</item>
+        <item>15,7,7,15,7,7,7,7,7,10,10,7,3,3,9,3,3,9,5,5,5,14,14,5</item>
+        <item>1,1,1,1,1,1,1,1,2,2,2,2,2,2,3,3,3,3,4,4,5,5,5,5</item>
+
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>11,1,10,0,3,35,80</item>
+        <item>7,7,7,7,9,7,7,9,3,3,15,9,9,15,12,14,14,12,12,6,6,12,12,12</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3,3,3,4,4,4,4,5,5,5,5,5,5</item>
+
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>11,1,10,0,3,30,80</item>
+        <item>7,15,15,7,9,7,7,9,3,3,3,7,7,3,12,14,14,12,6,6,12,6,6,12</item>
+        <item>1,1,1,1,2,2,2,2,3,3,3,3,3,3,4,4,4,4,4,4,5,5,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>9,1,10,0,3,30,60</item>
+        <item>7,7,7,15,15,7,11,14,14,11,11,12,12,11,14,14,8,8</item>
+        <item>2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,8,8</item>
+
+
+        <item>5C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>3,6,7,3,2,150,300</item>
+        <item>1,1,1,6,6,1</item>
+        <item>1,1,1,1,1,1</item>
+
+
+        <item>6A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>4,6,7,3,2,150,300</item>
+        <item>1,6,6,6,1,10,6,10</item>
+        <item>1,1,1,1,1,1,1,1</item>
+
+        <item>6A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>4,6,7,3,2,140,300</item>
+        <item>6,6,1,10,6,10,2,6</item>
+        <item>1,1,1,1,1,1,1,1</item>
+
+        <item>6B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,140,300</item>
+        <item>10,10,2,10,2,2,6,6,6,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>10,10,2,10,2,2,4,4,4,6</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>6C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,130,300</item>
+        <item>10,3,3,2,7,2,10,6,10,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+
+        <item>6C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,300</item>
+        <item>10,3,3,3,7,2,10,10,10,4</item>
+        <item>1,1,1,1,1,1,2,2,3,3</item>
+
+        <item>7A Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,120,240</item>
+        <item>15,3,3,7,10,9,3,6,14,14</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7A+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>15,7,3,7,10,3,3,4,14,14</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>7,7,15,7,9,9,3,9,6,6</item>
+        <item>1,1,1,1,2,2,3,3,5,5</item>
+
+        <item>7B+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>5,6,7,3,2,110,240</item>
+        <item>15,7,3,3,10,2,6,14,6,6</item>
+        <item>1,1,2,2,3,3,4,4,5,5</item>
+
+        <item>7C Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,100,180</item>
+        <item>9,7,15,3,3,3,3,7,6,5,12,12</item>
+        <item>2,2,2,2,3,3,3,3,4,4,5,5</item>
+
+        <item>7C+ Benchmark</item>
+        <item>Grips &amp; Grades test</item>
+        <item>6,6,7,3,2,90,180</item>
+        <item>7,7,7,15,6,5,12,12,14,14,8,8</item>
+        <item>2,2,3,3,4,4,5,5,6,6,8,8</item>
+
     </string-array>
 
 
