--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="update_workout_to_database">Update workout to database</string>
     <string name="hangboard_image">Hangboard image</string>
     <string name="time_controls">Time Controls</string>
-    <string name="new_workout">New Custom\nWorkout</string>
+    <string name="new_workout">New 5A\nWorkout</string>
     <string name="start_workout">Start</string>
     <string name="workout_history">Logbook</string>
     <string name="repeaters">Repeaters</string>
